// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DruxtBreadcrumb 404 route 1`] = `
"<div>
  <druxtwrapper-stub crumbs=\\"[object Object]\\" value=\\"[object Object]\\"></druxtwrapper-stub>
</div>"
`;

exports[`DruxtBreadcrumb level 1 1`] = `
"<div>
  <druxtwrapper-stub crumbs=\\"[object Object],[object Object]\\" value=\\"[object Object],[object Object]\\"></druxtwrapper-stub>
</div>"
`;

exports[`DruxtBreadcrumb level 2 1`] = `
"<div>
  <druxtwrapper-stub crumbs=\\"[object Object],[object Object],[object Object]\\" value=\\"[object Object],[object Object],[object Object]\\"></druxtwrapper-stub>
</div>"
`;

exports[`DruxtBreadcrumb manual path 1`] = `
"<div>
  <druxtwrapper-stub crumbs=\\"[object Object],[object Object],[object Object]\\" value=\\"[object Object],[object Object],[object Object]\\"></druxtwrapper-stub>
</div>"
`;

exports[`DruxtBreadcrumb missing parent 1`] = `
"<div>
  <druxtwrapper-stub crumbs=\\"[object Object],[object Object]\\" value=\\"[object Object],[object Object]\\"></druxtwrapper-stub>
</div>"
`;

exports[`DruxtBreadcrumb no home 1`] = `
"<div>
  <druxtwrapper-stub></druxtwrapper-stub>
</div>"
`;

exports[`DruxtBreadcrumb root 1`] = `
"<div>
  <druxtwrapper-stub crumbs=\\"[object Object]\\" value=\\"[object Object]\\"></druxtwrapper-stub>
</div>"
`;
